--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ license = "MIT"
 repository = "https://github.com/kawarimidoll/gh-prism"
 
 [dependencies]
+color-eyre = "0.6.5"
+crossterm = "0.29.0"
+ratatui = "0.29.0"
