--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 repository = "https://github.com/kawarimidoll/gh-prism"
 
 [dependencies]
+clap = { version = "4.5.55", features = ["derive"] }
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
